2012-10-02  Jocelyn Turcotte  <jocelyn.turcotte@digia.com>

        Fix tst_QQuickWebView::scrollRequest after r130029
        https://bugs.webkit.org/show_bug.cgi?id=98045

        Reviewed by Simon Hausmann.

        The test needs to show the window and wait for the loadVisuallyCommitted()
        signal like did in the QML API auto tests.

        * UIProcess/API/qt/tests/qquickwebview/tst_qquickwebview.cpp:
        (tst_QQuickWebView::scrollRequest):
        * UIProcess/API/qt/tests/util.cpp:
        (waitForViewportReady):
        * UIProcess/API/qt/tests/util.h:

2012-10-02  Jinwoo Song  <jinwoo7.song@samsung.com>

        [EFL][WK2] Use correct gtest macro for testing true/false
        https://bugs.webkit.org/show_bug.cgi?id=98142

        Reviewed by Laszlo Gombos.

        Using EXPECT_EQ(true/false, ...) makes clang trip when it tries to convert
        true/false to a pointer. Tests should use EXPECT_TRUE/FALSE instead.

        * UIProcess/API/efl/tests/test_ewk2_view.cpp:
        (showPopupMenu):
        (TEST_F):

2012-10-01  Brady Eidson  <beidson@apple.com>

        Remove the Safari 2 -> Safari 3 icon database import code.
        https://bugs.webkit.org/show_bug.cgi?id=98113

        Reviewed by Maciej Stachowiak.

        Nuke the performImport() IconDatabaseClient method.

        * UIProcess/WebIconDatabase.cpp:
        (WebKit):
        * UIProcess/WebIconDatabase.h:
        (WebIconDatabase):

2012-10-01  Christophe Dumez  <christophe.dumez@intel.com>

        Fix compilation warnings
        https://bugs.webkit.org/show_bug.cgi?id=98020

        Reviewed by Gyuyoung Kim.

        Fix compilation warnings related to ewk_view.

        * UIProcess/API/efl/ewk_view.cpp:
        (_ewk_view_feed_touch_event_using_touch_point_list_of_evas):
        (_ewk_view_on_touch_down):
        (_ewk_view_on_touch_up):
        (_ewk_view_on_touch_move):
        * UIProcess/API/efl/ewk_view_ui_client.cpp:
        (exceededDatabaseQuota):
