@@ -1,3 +1,15 @@
+2012-10-02  Hugo Parente Lima  <hugo.lima@openbossa.org>
+
+        [WK2] PageViewportControllerClient.h uses WebCore class without declaring them
+        https://bugs.webkit.org/show_bug.cgi?id=98070
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        This patch just add forward declarations for code correctness.
+
+        * UIProcess/PageViewportControllerClient.h:
+        (WebCore):
+
 2012-10-02  Jocelyn Turcotte  <jocelyn.turcotte@digia.com>
 
         Fix tst_QQuickWebView::scrollRequest after r130029
